syntax = "proto3";

option java_package = "com.zhangyu.grpc.sms.proto";
option java_outer_classname = "SmsProto";
option java_multiple_files = false;

package sms;

service SmsService {
  rpc sendSms(SmsRequest) returns (stream SmsResponse){};
  rpc createPhone(stream PhoneNumberRequest) returns (PhoneNumberResponse){};
}

message SmsRequest {
  repeated string phoneNumber = 1;
  string content = 2;
}

message SmsResponse {
  string result = 1;
}

message PhoneNumberRequest {
  string phoneNumber = 1;
}

message PhoneNumberResponse {
  string result = 1;
}